modules/vpc/internet_gateways.tf

resource "aws_internet_gateway" "default_vpc_igw" {
  vpc_id = "vpc-0d84fba11c63039b4"
}
